# PHTV

./: .editorconfig  .gitattributes  .gitignore  .swift-format  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGLISH_RESTORE_LOGIC.md  FAQ.md  INSTALL.md  IntegrationTests.swift  LICENSE  PHTV.sln  PHTVFunctionalTests.swift  PUSH_TO_GITHUB.md  QUICK_START_CHECKLIST.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.2.2.md  RELEASE_NOTES_1.2.4.md  RELEASE_NOTES_1.2.5.md  RELEASE_NOTES_1.2.6.md  SECURITY.md  SETTINGS_AUDIT.md  SETUP_COMPLETE.md  SPARKLE_FIX_SUMMARY.md  SPARKLE_SETUP_GUIDE.md  TESTING_GUIDE.md  THIRD_PARTY_NOTICES.md  build_windows.bat
.github/: CODEOWNERS  FUNDING.yml  README.md  dependabot.yml  pull_request_template.md
App/: fix_engine.py  test_arrow.swift  test_combinations.swift  test_picker.swift
Configs/: README.md  SwiftUIConfig.xcconfig
Engine/: ConvertTool.cpp  ConvertTool.h  DataType.h  Engine.h  EnglishWordDetector.cpp  SmartSwitchKey.cpp  SmartSwitchKey.h
Formula/: phtv.rb
Linux/: CMakeLists.txt  README.md
Linux/Adapter/: LinuxKeycodeAdapter.cpp  LinuxKeycodeAdapter.h
Linux/Engine/: ConvertTool.cpp  Engine.cpp  SmartSwitchKey.cpp
Linux/Host/: ConsoleSmokeMain.cpp  PHTVEngineSession.cpp  PHTVEngineSession.h
Linux/IBus/: PHTVIBusEngineSkeleton.cpp  PHTVIBusEngineSkeleton.h
Linux/Runtime/: EngineGlobals.cpp  EngineGlobals.h
Linux/docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  DISTRIBUTION.md  PRIVACY.md  ROADMAP.md  SECURITY.md  TESTING.md
Linux/docs/adr/: 0001-native-linux-stack.md
Linux/src/PHTV.Linux.Fcitx5/: README.md
Linux/src/PHTV.Linux.IBus/: README.md
Linux/src/PHTV.Linux.Settings/: README.md
Linux/tests/: README.md
PHTV/: Info.plist  PHTV-Bridging-Header.h  PHTV.entitlements
PHTV.icon/: icon.json
PHTV.xcodeproj/: project.pbxproj
Releases/: README.md  RELEASE_NOTES_1.2.7.md
Shared/: CMakeLists.txt  README.md
Shared/Contracts/: README.md
Shared/Engine/: DataType.h  Engine.cpp  EnglishWordDetector.cpp  Macro.cpp
Shared/PHTVCore/: README.md
Shared/TestVectors/: README.md
Tests/: README.md
Windows/: .gitignore  Bridge.cpp  Bridge.h  CMakeLists.txt  README.md  build-all.sh  build.bat
Windows/Adapter/: Win32KeycodeAdapter.cpp  Win32KeycodeAdapter.h
Windows/App/: .gitignore  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PHTV.Windows.csproj  PHTV.rc  Program.cs  README.md  app.manifest  build-windows.sh  main.cpp  resource.h
Windows/App/Data/: EmojiDatabase.cs  VietnameseSynonyms.cs  VietnameseTextUtilities.cs
Windows/App/Dialogs/: AppPickerWindow.axaml  AppPickerWindow.axaml.cs  TextPromptWindow.cs
Windows/App/Models/: EmojiItem.cs  KlipyModels.cs  SettingsSnapshot.cs
Windows/App/Picker/: EmojiPickerViewModel.cs  EmojiPickerWindow.axaml  EmojiPickerWindow.axaml.cs
Windows/App/Picker/Tabs/: EmojiCategoriesTabView.axaml  EmojiCategoriesTabView.axaml.cs  GifTabView.axaml  GifTabView.axaml.cs  StickerTabView.axaml  StickerTabView.axaml.cs  UnifiedTabView.axaml  UnifiedTabView.axaml.cs
Windows/App/Services/: AppDiscoveryService.cs  BugReportService.cs  EmojiInsertionService.cs  KlipyApiClient.cs  RuntimeBridgeService.cs  SettingsPersistenceService.cs  WindowsStartupService.cs
Windows/App/Styles/: Theme.axaml
Windows/App/Tools/: build_ico.py
Windows/App/ViewModels/: AsyncRelayCommand.cs  MainWindowViewModel.cs  ObservableObject.cs  RelayCommand.cs  SettingsState.cs  SettingsTabId.cs  SidebarEntry.cs  TabViewModels.cs
Windows/App/Views/Tabs/: AboutTabView.axaml  AboutTabView.axaml.cs  AppsTabView.axaml  AppsTabView.axaml.cs  BugReportTabView.axaml  BugReportTabView.axaml.cs  HotkeysTabView.axaml  HotkeysTabView.axaml.cs  MacroTabView.axaml  MacroTabView.axaml.cs  SystemTabView.axaml  SystemTabView.axaml.cs  TypingTabView.axaml  TypingTabView.axaml.cs
Windows/Config/: PHTVConfig.cpp  PHTVConfig.h
Windows/Engine/: ConvertTool.cpp  DataType.h  Engine.cpp  Engine.h  EnglishWordDetector.cpp  Macro.cpp  SmartSwitchKey.h
Windows/Hook/: LowLevelHookService.cpp  LowLevelHookService.h  PHTVHookDaemonMain.cpp  README.md
Windows/Host/: ConsoleSmokeMain.cpp  PHTVEngineSession.cpp  PHTVEngineSession.h
Windows/Installer/: .gitignore  PHTV.wxs  build-msi.ps1
Windows/Installer/Localization/: PHTV.en-US.wxl  PHTV.vi-VN.wxl  WixUI.vi-VN.wxl
Windows/Runtime/: DictionaryBootstrap.cpp  DictionaryBootstrap.h  EngineGlobals.cpp  EngineGlobals.h  RuntimeConfig.cpp  RuntimeConfig.h
Windows/TSF/: PHTVTextServiceSkeleton.cpp  PHTVTextServiceSkeleton.h  RegisterToolMain.cpp
Windows/UI/: App.xaml  App.xaml.cs  ConvertWindow.xaml  ConvertWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PHTV.UI.csproj  Styles.xaml
Windows/UI/Interop/: PhtvNative.cs
Windows/UI/Pages/: AboutPage.xaml  AboutPage.xaml.cs  AppsPage.xaml  AppsPage.xaml.cs  HotkeysPage.xaml  HotkeysPage.xaml.cs  MacroPage.xaml  MacroPage.xaml.cs  PhtvPageBase.cs  SystemPage.xaml  SystemPage.xaml.cs  TypingPage.xaml  TypingPage.xaml.cs
Windows/UI/Utilities/: PhtvPaths.cs  ProcessUtils.cs
Windows/docs/: ARCHITECTURE.md  DEVELOPMENT.md  DISTRIBUTION.md  PRIVACY.md  ROADMAP.md  SECURITY.md  TESTING.md
Windows/docs/adr/: 0001-native-windows-stack.md
Windows/src/PHTV.Core/: README.md
Windows/src/PHTV.Windows.App/: README.md
Windows/src/PHTV.Windows.IME/: README.md
Windows/tests/: README.md
docs/: ARCHITECTURE.md  COMPATIBILITY.md  ENGINEERING.md  ENGINE_SWIFT_MIGRATION.md  FAQ.md  FIX_LAUNCH_AT_LOGIN.md  FIX_MACOS_MALWARE_WARNING.md  GITHUB_PAGES_SETUP.md  INSTALL.md  PRIVACY.md  README.md  RELEASING.md  TESTING.md  appcast-beta.xml  appcast-intel.xml  appcast.xml  bootstrap.php  browserconfig.xml  donate.html  feedback_protected.php  index-new.php  index.html  index.php  robots.txt  script.js  sitemap.xml  sw.js
homebrew/: SETUP_GUIDE.md  phtv.rb
scratch/: main.swift  test_executable  test_runner  test_runner.swift
script/: build_and_run.sh
scripts/: README.md  build_and_run.swift  codesign_and_notarize.sh  dev.sh  (+12 more)
(+894 files in other folders)
